# QuadTraj

./: .gitignore  CMakeLists.txt  CollisionChecker.py  Quadrotor.py  README.md  VoxelPlanner.py  example_bayes_opt.py  main.cpp  main.py  main_bow.py  main_bow_v0.py  main_bow_v1.py  model.py  requirements.txt  run.sh  utility.py  workspace.py
bak/: main.py  main_v_0.py
include/fcl/: config.h
lib/: libnlopt.so.0.11.1
lib/ccd/: ccd-targets.cmake
lib/cmake/fcl/: fcl-targets.cmake
lib/cmake/libcmaes/: libcmaesConfig.cmake  libcmaesConfigVersion.cmake  libcmaesTargets-noconfig.cmake  libcmaesTargets.cmake
lib/pkgconfig/: ccd.pc  fcl.pc  libcmaes.pc  nlopt.pc
results/: make_video.sh
src/: bo_param.h  bow_planner.h  collision_checker.h  model.h
test/: test1.txt  test2.txt  test3.txt  test4.txt
